[package]
name = "async-fsw"
description = "Cross-platform asynchronous filesystem notification library for Rust."
license = "MIT"
version = "0.2.0"
authors = ["Kristijan Sedlak <xpepermint@gmail.com>"]
edition = "2018"
documentation = "https://github.com/xpepermint/async-fsw"
homepage = "https://github.com/xpepermint/async-fsw"
repository = "https://github.com/xpepermint/async-fsw"

[dependencies]
notify = "5.0.0-pre.2"
async-std = { version = "^1.6.0", features = ["unstable"] }

[dev-dependencies]
async-std = { version = "^1.6.0", features = ["attributes"] }
